[package]
name = "ascent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.0"
rapier2d = { verison = "*", features = ["simd-stable"]}
bevy_ecs_ldtk = "0.4.0"
bevy_ecs_tilemap = "0.8.0"
big-brain = "0.14.0"
alsa-sys = "0.3.1"
