[package]
name = "ascent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.rapier2d]
opt-level = 3

[profile.release]
codegen-units = 1

[dependencies]
bevy = "0.9"
bevy_ecs_ldtk = "0.5.0"
big-brain = "0.17.0"
alsa-sys = "0.3.1"
bevy_rapier2d = "0.19.0"
